Made web controls the index.html and video viewer a secondary

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -6,15 +6,53 @@ body {
     display: flex;
 }
 
-div.player {
+    body div.content {
+        display: flex;
+        flex-direction: row;
+        flex-grow: 1;
+    }
+
+div.side-bar {
     display: flex;
-    min-width: 100vw;
-    max-width: 100vw;
-    width: 100vw;
+    flex-direction: column;
+    flex-grow: 0;
+    width: 180px;
+    min-width: 180px;
 }
 
-video {
-    min-width: inherit;
-    max-width: inherit;
-    width: inherit;
+    div.side-bar div.timeline {
+        display: flex;
+        flex-grow: 1;
+    }
+
+    div.side-bar div.time-spent {
+        display: flex;
+        flex-grow: 0;
+        color: white;
+        justify-content: right;
+    }
+
+div.main {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
+
+    div.main div.playback {
+        display: flex;
+        flex-direction: row;
+        flex-grow: 1;
+        min-height: 0;
+    }
+
+        div.main div.playback video {
+            flex-grow: 1;
+        }
+
+    div.main div.controls {
+        display: flex;
+        flex-grow: 0;
+        justify-content: center;
+        height: 180px;
+        min-height: 180px;
+    }
