--- a/web/src/index.css
+++ b/web/src/index.css
@@ -11,6 +11,15 @@
     cursor: none;
 }
 
+:fullscreen .main-video {
+    width: 100vw;
+    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
+}
+
 /* second video overlaps first -> size of videos is still respected */
 #video0 {
     position: relative;
