--- a/web/src/index.css
+++ b/web/src/index.css
@@ -32,6 +32,16 @@
 }
 
 
+/* table styling */
+.padded-left {
+    padding-left: 20px;
+}
+
+td {
+    text-align: left;
+}
+
+
 /* video styling */
 #videos-div {
     position: relative;
