--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,4 +1,4 @@
-/* splitting screen, from https://www.w3schools.com/howto/howto_css_split_screen.asp */
+/* splitting screen */
 .split {
     height: 100%;
     position: fixed;
@@ -18,25 +18,35 @@
     right: 0;
 }
 
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.centered img {
-    width: 150px;
-    border-radius: 50%;
-}
-
-
-/* table styling */
 .padded-left {
     padding-left: 20px;
 }
 
+.padded-right {
+    padding-right: 20px;
+}
+
+
+/* caching */
+#progress {
+    visibility: hidden;
+    width: 100%;
+    background-color: #ddd;
+    position: relative;
+}
+
+#progress-bar {
+    width: 0%;
+    height: 30px;
+    background-color: #04aa6d;
+}
+
+#cache-button {
+    position: absolute;
+}
+
+
+/* table styling */
 td {
     text-align: left;
 }
